# algorithmic-design

./: AD_01.tex.md  AD_02.tex.md  AD_03.tex.md
homeworks/: .gitignore  README.md
homeworks/Dijkstra/: hw_30-04.md
homeworks/Dijkstra/Ad_dijkstra/: CMakeLists.txt
homeworks/Dijkstra/Ad_dijkstra/include/: binheap.h  dijkstra.h  graph.h  queue.h  total_orders.h
homeworks/Dijkstra/Ad_dijkstra/src/: binheap.c  dijkstra.c  graph.c  main.c  queue.c
homeworks/Heaps/homework1/: hw_17-03.md
homeworks/Heaps/homework1/AD_binheaps/include/: binheap.h
homeworks/Heaps/homework1/AD_binheaps/src/: binheap.c
homeworks/Heaps/homework1/AD_binheaps/tests/: test_delete_min.c  test_insert.c
homeworks/Heaps/homework2/: hw_24-03.md
homeworks/Heaps/homework2/Ad_binheaps/include/: binheap.h
homeworks/Heaps/homework2/Ad_binheaps/src/: binheap.c
homeworks/Sorting/homework1/: hw_31-03.md
homeworks/Sorting/homework1/sorting/include/: binheap.h  heap_sort.h  total_order.h  utilities.h
homeworks/Sorting/homework1/sorting/src/: binheap.c  bubble_sort.c  heap_sort.c  insertion_sort.c  main.c  quick_sort.c  selection_sort.c
homeworks/Sorting/homework2/: hw_2-04.md
homeworks/Sorting/homework2/AD_sorting/include/: binheap.h  quick_sort.h
homeworks/Sorting/homework2/sorting/: CMakeLists.txt
homeworks/Strassen/strassen/: CMakeLists.txt
homeworks/Strassen/strassen/include/: padding.h  strassen.h  strassen_opt.h
homeworks/Strassen/strassen/src/: main.c  matrix.c  padding.c  strassen.c  strassen_opt.c  test.c
notes/: AD_01.md  AD_02.md  AD_03.md  AD_04.md  AD_05.md  AD_06.md  AD_07.md  AD_08.md
(+13 files in other folders)
